# discord-binance-algo-trading

./: .env.example  .gitignore  README.md  auth.yml  binance_script.py  data.json  discord_bot.py  logger.py  main.py  pyproject.toml
trader/: main.py
trader/bot/: discord.py
trader/db/: connection.py  models.py  schemas.py  services.py
